--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acerca de | AAE Systems - Growth Automation</title>
+    <title>Acerca de Nosotros - AAE Systems</title>
     <meta name="description"
-        content="Conoce AAE Systems, agencia especializada en Growth Automation e infraestructura digital para empresas que desean escalar ventas con sistemas automatizados.">
+        content="Conoce AAE Systems, agencia especializada en Growth Automation e infraestructura digital para escalar ventas en negocios B2B.">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -42,11 +42,11 @@
                 </button>
                 <nav class="dropdown-menu" id="dropdownMenu">
                     <a href="index.html" class="menu-link">Inicio</a>
-                    <a href="about.html" class="menu-link">Quienes somos</a>
+                    <a href="about.html" class="menu-link">Acerca de</a>
                     <a href="planes.html" class="menu-link">Planes</a>
-                    <a href="beneficios.html" class="menu-link">Soluciones</a>
+                    <a href="beneficios.html" class="menu-link">Beneficios</a>
                     <a href="politicas.html" class="menu-link">Políticas</a>
-                    <a href="contacto.html" class="menu-link">Contactanos</a>
+                    <a href="contacto.html" class="menu-link">Contacto</a>
                 </nav>
             </div>
         </div>
@@ -54,131 +54,83 @@
 
     <main class="container">
 
-        <!-- HERO -->
+        <!-- PAGE HEADER -->
         <section class="hero-section" style="min-height: 50vh;">
             <div class="hero-card container">
                 <div class="hero-bg"></div>
                 <div class="hero-content">
-                    <span class="badge">GROWTH AUTOMATION</span>
-                    <h1 class="hero-title">Diseñamos Infraestructura<br>que Convierte y Escala</h1>
+                    <span class="badge">NUESTRA VISIÓN</span>
+                    <h1 class="hero-title">Más que Automatización,<br>Diseñamos Crecimiento</h1>
                     <div class="divider"></div>
-                    <p class="hero-subtitle">
-                        No implementamos herramientas. Construimos sistemas de crecimiento que transforman
-                        tráfico en ingresos medibles.
-                    </p>
+                    <p class="hero-subtitle">La filosofía detrás de la infraestructura que escala empresas.</p>
                 </div>
             </div>
         </section>
 
-        <!-- STORY -->
+        <!-- STORY SECTION -->
         <section class="story-section container">
             <div class="story-content">
                 <h2 class="story-title">El Origen</h2>
                 <div class="story-text">
-                    <p>
-                        AAE Systems nació al identificar un problema estructural en el mercado:
-                        empresas invirtiendo en marketing sin tener un sistema sólido de conversión.
-                    </p>
+                    <p>En un mercado donde muchas empresas invierten en marketing sin controlar su sistema de conversión, AAE Systems nació con una misión clara: construir infraestructura digital que transforme tráfico en ingresos.</p>
 
-                    <p>
-                        El problema no era la falta de herramientas. Era la falta de arquitectura.
-                        Decidimos construir infraestructura digital que capte, nutra y convierta
-                        prospectos automáticamente.
-                    </p>
+                    <p>Detectamos un patrón recurrente: negocios con gran potencial, pero con procesos fragmentados de captación y seguimiento. El problema no era la falta de herramientas, sino la ausencia de arquitectura estratégica.</p>
                 </div>
 
-                <!-- Methodology -->
                 <div class="methodology-results">
                     <div class="story-text">
                         <h2 class="story-title" style="font-size: 2rem;">Ingeniería de Crecimiento</h2>
-                        <p>
-                            Creemos que el crecimiento real no depende solo de atraer tráfico,
-                            sino de diseñar sistemas que conviertan oportunidades en ventas.
-                        </p>
-                        <p>
-                            Nuestra metodología integra captación, seguimiento, conversión,
-                            pagos y métricas en un ecosistema digital que opera 24/7.
-                        </p>
+                        <p>Creemos que el verdadero crecimiento no depende de más anuncios, sino de un sistema bien diseñado. Cuando la infraestructura digital está correctamente estructurada, los leads se captan, el seguimiento se ejecuta y las ventas se convierten de manera consistente.</p>
+                        <p>No implementamos herramientas aisladas; diseñamos ecosistemas de crecimiento que operan 24/7 en el backend de tu negocio.</p>
                     </div>
-                    <img src="img/aae_ai_face.png" alt="Infraestructura de Crecimiento"
+                    <img src="img/aae_ai_face.png" alt="Infraestructura Digital de Crecimiento"
                         style="width: 100%; border-radius: 4px; box-shadow: 0 4px 15px rgba(0,0,0,0.3);">
                 </div>
 
                 <div class="quote-block">
-                    "La automatización no reemplaza el talento humano.
-                    Lo libera para enfocarse en estrategia, liderazgo y expansión."
+                    "La automatización no reemplaza el talento humano. Lo libera para enfocarse en estrategia, liderazgo y expansión."
                 </div>
 
-                <!-- VALUES -->
+                <!-- CORE VALUES -->
                 <div style="margin: 5rem 0;">
                     <h2 class="story-title" style="text-align: center;">Nuestros Principios Estratégicos</h2>
                     <div class="values-grid">
-
-                        <div class="value-card">
-                            <span class="value-icon">📊</span>
-                            <h3 style="margin-bottom: 0.5rem; font-family: var(--font-serif);">
-                                Decisiones Basadas en Datos
-                            </h3>
-                            <p style="font-size: 0.9rem; color: #666;">
-                                Sin métricas no hay crecimiento. Todo sistema debe ser medible y optimizable.
-                            </p>
-                        </div>
-
                         <div class="value-card">
                             <span class="value-icon">⚡</span>
-                            <h3 style="margin-bottom: 0.5rem; font-family: var(--font-serif);">
-                                Precisión Operativa
-                            </h3>
-                            <p style="font-size: 0.9rem; color: #666;">
-                                Los sistemas deben ejecutar con exactitud para garantizar consistencia y escalabilidad.
-                            </p>
+                            <h3 style="margin-bottom: 0.5rem; font-family: var(--font-serif);">Precisión Operativa</h3>
+                            <p style="font-size: 0.9rem; color: #666;">El crecimiento depende de consistencia. Nuestros sistemas ejecutan procesos críticos con exactitud.</p>
                         </div>
-
+                        <div class="value-card">
+                            <span class="value-icon">📊</span>
+                            <h3 style="margin-bottom: 0.5rem; font-family: var(--font-serif);">Decisiones Basadas en Datos</h3>
+                            <p style="font-size: 0.9rem; color: #666;">Cada sistema debe ser medible. Las métricas guían la estrategia y la optimización continua.</p>
+                        </div>
                         <div class="value-card">
                             <span class="value-icon">🔁</span>
-                            <h3 style="margin-bottom: 0.5rem; font-family: var(--font-serif);">
-                                Escalabilidad Real
-                            </h3>
-                            <p style="font-size: 0.9rem; color: #666;">
-                                Diseñamos infraestructura preparada para crecer sin romper procesos internos.
-                            </p>
+                            <h3 style="margin-bottom: 0.5rem; font-family: var(--font-serif);">Escalabilidad Real</h3>
+                            <p style="font-size: 0.9rem; color: #666;">Diseñamos infraestructura preparada para crecer sin romperse cuando el negocio aumenta su volumen.</p>
                         </div>
-
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- FOUNDER -->
+        <!-- FOUNDER SECTION -->
         <section class="founder-section">
             <div class="container" style="max-width: 800px;">
                 <h2 class="story-title">El Fundador</h2>
                 <div class="story-text">
-                    <p>
-                        Aaron Ayala fundó AAE Systems con una visión clara:
-                        las empresas no necesitan más herramientas,
-                        necesitan arquitectura de crecimiento.
-                    </p>
+                    <p>Aaron Ayala fundó AAE Systems al identificar una brecha estructural en el mercado: empresas invirtiendo en marketing sin un sistema sólido de conversión.</p>
 
-                    <p>
-                        Con formación en ingeniería y diseño de sistemas complejos,
-                        comprendió que el verdadero diferencial competitivo
-                        está en cómo se estructura el sistema de ventas.
-                    </p>
+                    <p>Con formación en ingeniería y diseño de sistemas complejos, comprendió que la mayoría de los negocios no necesitaban más software, sino arquitectura de crecimiento.</p>
 
-                    <p>
-                        "Mi objetivo no es automatizar tareas.
-                        Es diseñar sistemas que conviertan cada oportunidad
-                        en una posibilidad real de expansión."
-                    </p>
+                    <p>"Mi objetivo no es automatizar tareas. Es diseñar sistemas que conviertan cada oportunidad en una posibilidad real de expansión empresarial."</p>
 
                     <div style="margin-top: 60px; padding-top: 30px; display: inline-block;">
-                        <p style="font-family: 'Cormorant Garamond', serif; font-style: italic; font-size: 2.5rem; color: #1a1a1a;">
-                            Aaron Ayala
-                        </p>
-                        <p style="font-family: 'Inter', sans-serif; font-size: 0.8rem; font-weight: 600; letter-spacing: 0.2em; text-transform: uppercase; color: #666;">
-                            CEO, AAE Systems
-                        </p>
+                        <p style="font-family: 'Cormorant Garamond', serif; font-style: italic; font-size: 2.5rem; color: #1a1a1a; margin-bottom: 0.5rem; line-height: 1;">
+                            Aaron Ayala</p>
+                        <p style="font-family: 'Inter', sans-serif; font-size: 0.8rem; font-weight: 600; letter-spacing: 0.2em; text-transform: uppercase; color: #666; margin-top: 10px; border-top: 1px solid #ddd; padding-top: 10px; display: inline-block;">
+                            CEO, AAE Systems</p>
                     </div>
                 </div>
             </div>
@@ -196,29 +148,27 @@
                     <div class="logo-decoration text-white"><span>❖</span></div>
                 </a>
             </div>
-
-            <p class="footer-slogan">
-                INFRAESTRUCTURA DE CRECIMIENTO PARA EMPRESAS QUE QUIEREN ESCALAR
-            </p>
+            <p class="footer-slogan">INFRAESTRUCTURA DE CRECIMIENTO PARA EMPRESAS QUE QUIEREN ESCALAR</p>
 
             <div class="footer-links">
                 <a href="index.html">Inicio</a>
-                <a href="about.html">Quienes somos</a>
+                <a href="about.html">Acerca de</a>
                 <a href="planes.html">Planes</a>
-                <a href="beneficios.html">Soluciones</a>
+                <a href="beneficios.html">Beneficios</a>
                 <a href="politicas.html">Políticas</a>
-                <a href="contacto.html">Contactanos</a>
+                <a href="contacto.html">Contacto</a>
             </div>
 
             <div class="footer-social">
-                <a href="https://wa.me/5217341271314" target="_blank"><i class="ri-whatsapp-fill"></i></a>
-                <a href="https://www.instagram.com/aaesystems.mx/" target="_blank"><i class="ri-instagram-fill"></i></a>
-                <a href="https://www.linkedin.com/in/aae-systems-1484563b2/" target="_blank"><i class="ri-linkedin-fill"></i></a>
+                <a href="https://wa.me/5217341271314" target="_blank" aria-label="WhatsApp"><i class="ri-whatsapp-fill"></i></a>
+                <a href="https://www.instagram.com/aaesystems.mx/" target="_blank" aria-label="Instagram"><i class="ri-instagram-fill"></i></a>
+                <a href="https://www.linkedin.com/in/aae-systems-1484563b2/" target="_blank" aria-label="LinkedIn"><i class="ri-linkedin-fill"></i></a>
             </div>
 
             <p class="copyright">© 2026 AAE Systems. Todos los derechos reservados.</p>
         </div>
     </footer>
 
+    <script src="script.js?v=1.3"></script>
 </body>
 </html>
